# apertium-evn

./: Makefile.am  Makefile_relax_deriv  README  apertium-evn.evn.phon  apertium-evn.evn.spellrelax  apertium-evn.evn.tagged  apertium-evn.evn.twol  configure.ac  evn.prob
dev/: spellrelax.twol
test/: adj-gen-generator-expected.txt  adj-gen-generator-gold.txt  adj-gen-input.txt  adj-input.txt  adj-morph-expected.txt  adj-morph-gold.txt  nouns-gen-generator-expected.txt  nouns-gen-generator-gold.txt  nouns-gen-input.txt  nouns-input.txt  nouns-morph-expected.txt  nouns-morph-gold.txt  nouns.tsv  pron-gen-generator-expected.txt  pron-gen-generator-gold.txt  pron-gen-input.txt  pron-input.txt  pron-morph-expected.txt  pron-morph-gold.txt  test_vowel_harmony-gen-generator-expected.txt  test_vowel_harmony-gen-generator-gold.txt  test_vowel_harmony-gen-input.txt  test_vowel_harmony-input.txt  test_vowel_harmony-morph-expected.txt  test_vowel_harmony-morph-gold.txt  tests.json  verbs-gen-generator-expected.txt  verbs-gen-generator-gold.txt  verbs-gen-input.txt  verbs-input.txt  verbs-morph-expected.txt  verbs-morph-gold.txt
